--- a/main.css
+++ b/main.css
@@ -177,7 +177,7 @@
 }
 
 .bima-site__headderinner{
-    background-image: url(./images/bima-inner-bg.png);
+    background-image: url(https://darakchi.uz/storage/2d/0c/ca/79776/conversions/MOw19qhH3RM9nayKSO25nBFA13RP4plf-xl.jpg);
     background-repeat: no-repeat;
     background-size: 100% 640px;
     padding: 170px 0px 60px 0px;
@@ -241,7 +241,7 @@
 
 .users__itemimg{
     width: 100%;
-    height: 224px;
+    height: 270px;
 }
 
 .users__iteminfo{
